--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <div class="number"style="--n:12"><b>12</b></div>
     <!-- Hour, Minute, Second & Center point -->
      <div class="center-dot"></div>   
-     <div class="hour-hand"></div>
-     <div class="minute-hand"></div>
-     <div class="second-hand"></div>
+     <div id="hour-hand" class="hour-hand"></div>
+     <div id="minute-hand" class="minute-hand"></div>
+     <div id="second-hand" class="second-hand"></div>
  </div>
 
 
