Watch is fully complete now

--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
      <div id="hour-hand" class="hour-hand"></div>
      <div id="minute-hand" class="minute-hand"></div>
      <div id="second-hand" class="second-hand"></div>
+     <div class="name"><h2>SHUVO</h2></div>
+    
  </div>
+
+ <!-- special clock title -->
+     <div><h2 class="title">This is a Special Clock</h2></div>
+
 
 
     <!-- _______________________________________________ -->
